Font-size and broken image bug fixes
Font-size for parargraphs in images is too big causing the button
to move off each box. Img source was incorrect for one of the photos

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ nav {
   font-size: 38px;
   text-decoration: none; }
 .hover-content p {
-  font-size: 20px;
+  font-size: 16px;
   margin: 20px auto;
   transition: .75s;
   width: 80%; }
