--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -66,7 +66,7 @@ nav {
   }
 
   p {
-    font-size: 20px;
+    font-size: 16px;
     margin: 20px auto;
     transition: .75s;
     width: 80%;
